--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/clipboard": "^6.1.0",
+    "@awesome-cordova-plugins/core": "^6.1.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/clipboard": "^4.0.1",
     "@capacitor/core": "4.3.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "cordova-clipboard": "^1.3.0",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
