--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/clipboard": "^6.1.0",
     "@awesome-cordova-plugins/core": "^6.1.0",
+    "@capacitor/android": "^4.4.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/clipboard": "^4.0.1",
     "@capacitor/core": "4.3.0",
